# backendCourse

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt
hw/: redis_cache_decorator.py
src/: __init__.py  config.py  database.py  exceptions.py  fake.py  main.py
src/api/: __init__.py  auth.py  bookings.py  dependencies.py  facilities.py  hotels.py  images.py  rooms.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/migrations/versions/: 0683ac0650eb_add_rooms_table_2.py  2025_01_25_0017-fb06bc7cbfca_initial_migration.py  2025_01_25_0020-4736fa6a4a0a_add_rooms.py  2025_02_15_2358-6bd174939dc4_add_users.py  2025_02_25_2313-061a89dad981_add_bookings.py  2025_03_17_2305-2f7a3078aa61_add_facilities.py  2025_08_10_2141-c2d180d9033f_add_cascade_delete_for_rooms.py  c5ae09619ae8_initial_migration.py
src/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repos/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/repos/mappers/: base.py  mappers.py
src/schemas/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/services/: auth.py  base.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/tasks/: celery_app.py  tasks.py
src/templates/: index.html
src/utils/: db_manager.py
tests/: conftest.py  mock_hotels.json  mock_rooms.json
tests/integration/: test_auth.py
tests/integration/auth/: test_api.py
tests/integration/bookings/: test_api.py  test_db.py
tests/integration/facilities/: test_api.py
tests/integration/hotels/: test_api.py  test_db.py
tests/unit/: test_auth.py
